# pyregions_snowflake

./: .gitignore  README.md  build.sh  pyproject.toml  setup.py
.github/workflows/: publish.yml
src/utils/: utils.py
